# webgame

./: Cargo.toml  Makefile
webgame_client/: Cargo.toml  package.json  webpack.config.js
webgame_client/src/: api.rs  app.rs  lib.rs  utils.rs
webgame_client/src/components/: chat_box.rs  mod.rs  player_list.rs
webgame_client/src/views/: game.rs  menu.rs  mod.rs  start.rs
webgame_client/static/: index.html  webgame.css
webgame_protocol/: Cargo.toml
webgame_protocol/src/: game.rs  lib.rs  message.rs  player.rs  state.rs
webgame_server/: Cargo.toml
webgame_server/src/: board.rs  game.rs  main.rs  server.rs  universe.rs  utils.rs  wordlist.txt
